add fillter pokemon, filter type not yet

--- a/src/index.html
+++ b/src/index.html
@@ -1,84 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokemon</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header"></div>
     <div class="main">
-        <!-- <div class="title">
+      <!-- <div class="title">
             <h3>Search Pokemon</h3>
         </div> -->
-        <div class="search">
-            <input type="text" placeholder="Search Pokemon" id="search">
-        </div>
+      <div class="search">
+        <input type="text" placeholder="Search Pokemon" id="search" />
+      </div>
+      <div class="filter">
+        <div class="filter-item">
+            <input type="checkbox" id="all" checked/>
+            <label for="all">Show all</label>
+          </div>
+        <!-- <div class="filter-title">
+          <h3>Filter Pokemon</h3>
+        </div> -->
         
+        <div class="filter-list"></div>
+      </div>
     </div>
     <div class="pokedex">
-        <div class="row">
-            <div class="pokemon">
+      <div class="row" id="pokelist">
+        <!-- <div class="pokemon">
                 <div class="pokemon-img">
                     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
                 </div>
                 <div class="pokemon-name">
                     <h3>Bulbasaur</h3>
                 </div>
-            </div>
-            <div class="pokemon">
-                <div class="pokemon-img">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
+                <div class="pills">
+                    <span class="pill water">water</span>
+                    <span class="pill bug">water</span>
+                    <span class="pill fighting">water</span>
                 </div>
-                <div class="pokemon-name">
-                    <h3>Bulbasaur</h3>
-                </div>
-            </div>
-            <div class="pokemon">
-                <div class="pokemon-img">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                </div>
-                <div class="pokemon-name">
-                    <h3>Bulbasaur</h3>
-                </div>
-            </div>
-            <div class="pokemon">
-                <div class="pokemon-img">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                </div>
-                <div class="pokemon-name">
-                    <h3>Bulbasaur</h3>
-                </div>
-            </div>
-            <div class="pokemon">
-                <div class="pokemon-img">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                </div>
-                <div class="pokemon-name">
-                    <h3>Bulbasaur</h3>
-                </div>
-            </div>
-            <div class="pokemon">
-                <div class="pokemon-img">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                </div>
-                <div class="pokemon-name">
-                    <h3>Bulbasaur</h3>
-                </div>
-            </div>
-            <div class="pokemon">
-                <div class="pokemon-img">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                </div>
-                <div class="pokemon-name">
-                    <h3>Bulbasaur</h3>
-                </div>
-            </div>
-        </div>
+            </div> -->
+      </div>
+      <div class="pokeloading">LOADING...</div>
     </div>
     <!-- <poke-search></poke-search> -->
 
     <script src="../dist/main.js"></script>
-</body>
+  </body>
 </html>
